finalize initial model

--- a/Gevindu/ML/Test models.ipynb
+++ b/Gevindu/ML/Test models.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
        "torch.Size([32, 128])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,7 +92,8 @@
     "    def __init__(self, base_channels=64, kernel_size=7, downsample=True):\n",
     "        super(SEResNet1d, self).__init__()\n",
     "        if downsample:\n",
-    "            self.seresnet = nn.Sequential(nn.Conv1d(1, base_channels, kernel_size=15, padding=7, stride=2), \n",
+    "            self.seresnet = nn.Sequential(UnsqueezeLayer(dim=(1,)),\n",
+    "                                          nn.Conv1d(1, base_channels, kernel_size=15, padding=7, stride=2), \n",
     "                                          nn.BatchNorm1d(base_channels), \n",
     "                                          nn.ReLU(), \n",
     "                                          nn.MaxPool1d(kernel_size=3, padding=1, stride=2),\n",
@@ -104,7 +105,8 @@
     "                                          nn.AdaptiveAvgPool1d(1),\n",
     "                                          SqueezeLayer(dim=2))\n",
     "        else:\n",
-    "            self.seresnet = nn.Sequential(nn.Conv1d(1, base_channels, kernel_size=1), \n",
+    "            self.seresnet = nn.Sequential(UnsqueezeLayer(dim=(1,)),\n",
+    "                                          nn.Conv1d(1, base_channels, kernel_size=1), \n",
     "                                          SEResBlock1d(base_channels, kernel_size=kernel_size), \n",
     "                                          SEResBlock1d(base_channels, kernel_size=kernel_size),\n",
     "                                          SEResBlock1d(base_channels, upsample=True, kernel_size=kernel_size), \n",
@@ -116,7 +118,7 @@
     "    def forward(self, input):\n",
     "        return self.seresnet(input)\n",
     "    \n",
-    "dummy = torch.rand((32, 1, 1024))\n",
+    "dummy = torch.rand((32, 1024))\n",
     "\n",
     "model = SEResNet1d(downsample=True)\n",
     "dummy_out = model(dummy)\n",
@@ -132,23 +134,12 @@
     {
      "data": {
       "text/plain": [
-       "torch.Size([8, 128])"
+       "torch.Size([32, 128])"
       ]
      },
      "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
     }
    ],
    "source": [
@@ -192,7 +183,8 @@
     "class SEResNet2d(nn.Module):\n",
     "    def __init__(self, base_channels=64, kernel_size=7):\n",
     "        super(SEResNet2d, self).__init__()\n",
-    "        self.seresnet = nn.Sequential(nn.Conv2d(1, base_channels, kernel_size=1), \n",
+    "        self.seresnet = nn.Sequential(UnsqueezeLayer(dim=(1,)),\n",
+    "                                      nn.Conv2d(1, base_channels, kernel_size=1), \n",
     "                                      SEResBlock2d(base_channels, kernel_size=kernel_size), \n",
     "                                      SEResBlock2d(base_channels, kernel_size=kernel_size),\n",
     "                                      SEResBlock2d(base_channels, upsample=True, kernel_size=kernel_size), \n",
@@ -204,12 +196,94 @@
     "    def forward(self, input):\n",
     "        return self.seresnet(input)\n",
     "\n",
-    "dummy = torch.rand((8, 1, 256, 128))\n",
+    "dummy = torch.rand((32, 64, 32))\n",
     "\n",
     "model = SEResNet2d()\n",
     "dummy_out = model(dummy)\n",
     "\n",
     "dummy_out.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Acoustic feature vector shape torch.Size([8, 128])\n",
+      "RCS feature vector shape torch.Size([8, 128])\n",
+      "Doppler feature vector shape torch.Size([8, 128])\n",
+      "Stacked feature matrix shape torch.Size([8, 4, 128])\n",
+      "Transformer output matrix shape torch.Size([8, 4, 128])\n",
+      "Classification output matrix shape torch.Size([8, 2])\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Model(nn.Module):\n",
+    "    def __init__(self, base_channels=64, num_classes=2):\n",
+    "        super(Model, self).__init__()\n",
+    "\n",
+    "        self.acoustic_encoder_1 = SEResNet1d(base_channels, kernel_size=7, downsample=True)\n",
+    "        self.acoustic_encoder_2 = SEResNet1d(base_channels, kernel_size=107, downsample=True)\n",
+    "        self.rcs_encoder = SEResNet1d(base_channels, kernel_size=7, downsample=False)\n",
+    "        self.doppler_encoder = SEResNet2d(base_channels, kernel_size=7)\n",
+    "        encoder_layer = nn.TransformerEncoderLayer(d_model=128, nhead=8)\n",
+    "        self.transformer_encoder = nn.TransformerEncoder(encoder_layer, num_layers=1)\n",
+    "        self.classifier = nn.Linear(128, num_classes)\n",
+    "\n",
+    "    def forward(self, audio, rcs, doppler):  \n",
+    "        acoustic_encoded = torch.sum(torch.stack([self.acoustic_encoder_1(audio), \n",
+    "                                                  self.acoustic_encoder_2(audio)\n",
+    "                                                  ], dim = 1), dim = 1)\n",
+    "        rcs_encoded = self.rcs_encoder(rcs)\n",
+    "        doppler_encoded = self.doppler_encoder(doppler)\n",
+    "\n",
+    "        stacked_features = torch.stack((torch.rand((8, 128)), acoustic_encoded, rcs_encoded, doppler_encoded), dim=1)\n",
+    "\n",
+    "        combined_features = self.transformer_encoder(stacked_features)\n",
+    "\n",
+    "        output = self.classifier(combined_features[:, 0, :])\n",
+    "\n",
+    "        # print(\"Acoustic feature vector shape\", acoustic_encoded.shape)\n",
+    "        # print(\"RCS feature vector shape\", rcs_encoded.shape)\n",
+    "        # print(\"Doppler feature vector shape\", doppler_encoded.shape)\n",
+    "        # print(\"Stacked feature matrix shape\", stacked_features.shape)\n",
+    "        # print(\"Transformer output matrix shape\", combined_features.shape)\n",
+    "        # print(\"Classification output matrix shape\", output.shape)\n",
+    "\n",
+    "        return output\n",
+    "\n",
+    "batch_size = 8\n",
+    "audio = torch.rand((batch_size, 512))\n",
+    "rcs = torch.rand((batch_size, 64))\n",
+    "doppler = torch.rand((batch_size, 64, 32))\n",
+    "model = Model()\n",
+    "\n",
+    "model(audio, rcs, doppler)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "18.0"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(p.numel() for p in model.parameters() if p.requires_grad)//1e6"
    ]
   },
   {
