--- a/ML/Test models.ipynb
+++ b/ML/Test models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
        "torch.Size([32, 128])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
        "torch.Size([32, 128])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +161,7 @@
     "    def __init__(self, in_channels, upsample=False, kernel_size=7, dropout=0.4):\n",
     "        super(SEResBlock2d, self).__init__()\n",
     "        if upsample:\n",
-    "            out_channels = in_channels*2\n",
+    "            out_channels = in_channels*upsample\n",
     "            self.identity = nn.Sequential(nn.Conv2d(in_channels, out_channels, kernel_size=1), \n",
     "                                          nn.BatchNorm2d(out_channels))\n",
     "        else:\n",
@@ -181,15 +181,13 @@
     "        return self.act_fn(self.convs(input) + self.identity(input))\n",
     "\n",
     "class SEResNet2d(nn.Module):\n",
-    "    def __init__(self, base_channels=64, kernel_size=7):\n",
+    "    def __init__(self):\n",
     "        super(SEResNet2d, self).__init__()\n",
     "        self.seresnet = nn.Sequential(UnsqueezeLayer(dim=(1,)),\n",
-    "                                      nn.Conv2d(1, base_channels, kernel_size=1), \n",
-    "                                      SEResBlock2d(base_channels, kernel_size=kernel_size), \n",
-    "                                      SEResBlock2d(base_channels, kernel_size=kernel_size),\n",
-    "                                      SEResBlock2d(base_channels, upsample=True, kernel_size=kernel_size), \n",
-    "                                      SEResBlock2d(base_channels*2, kernel_size=kernel_size),\n",
-    "                                      SEResBlock2d(base_channels*2, kernel_size=kernel_size),\n",
+    "                                      SEResBlock2d(1, upsample=4, kernel_size=3), \n",
+    "                                      SEResBlock2d(4, upsample=4, kernel_size=3),\n",
+    "                                      SEResBlock2d(16, upsample=4, kernel_size=5), \n",
+    "                                      SEResBlock2d(64, upsample=2, kernel_size=7),\n",
     "                                      nn.AdaptiveAvgPool2d(1),\n",
     "                                      SqueezeLayer(dim=(2, 3)))\n",
     "\n",
@@ -206,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +228,7 @@
     "        self.acoustic_encoder_1 = SEResNet1d(base_channels, kernel_size=7, downsample=True)\n",
     "        self.acoustic_encoder_2 = SEResNet1d(base_channels, kernel_size=107, downsample=True)\n",
     "        self.rcs_encoder = SEResNet1d(base_channels, kernel_size=7, downsample=False)\n",
-    "        self.doppler_encoder = SEResNet2d(base_channels, kernel_size=7)\n",
+    "        self.doppler_encoder = SEResNet2d()\n",
     "        encoder_layer = nn.TransformerEncoderLayer(d_model=128, nhead=8)\n",
     "        self.transformer_encoder = nn.TransformerEncoder(encoder_layer, num_layers=1)\n",
     "        self.classifier = nn.Linear(128, num_classes)\n",
@@ -248,12 +246,12 @@
     "\n",
     "        output = self.classifier(combined_features[:, 0, :])\n",
     "\n",
-    "        # print(\"Acoustic feature vector shape\", acoustic_encoded.shape)\n",
-    "        # print(\"RCS feature vector shape\", rcs_encoded.shape)\n",
-    "        # print(\"Doppler feature vector shape\", doppler_encoded.shape)\n",
-    "        # print(\"Stacked feature matrix shape\", stacked_features.shape)\n",
-    "        # print(\"Transformer output matrix shape\", combined_features.shape)\n",
-    "        # print(\"Classification output matrix shape\", output.shape)\n",
+    "        print(\"Acoustic feature vector shape\", acoustic_encoded.shape)\n",
+    "        print(\"RCS feature vector shape\", rcs_encoded.shape)\n",
+    "        print(\"Doppler feature vector shape\", doppler_encoded.shape)\n",
+    "        print(\"Stacked feature matrix shape\", stacked_features.shape)\n",
+    "        print(\"Transformer output matrix shape\", combined_features.shape)\n",
+    "        print(\"Classification output matrix shape\", output.shape)\n",
     "\n",
     "        return output\n",
     "\n",
@@ -263,27 +261,24 @@
     "doppler = torch.rand((batch_size, 64, 32))\n",
     "model = Model()\n",
     "\n",
-    "model(audio, rcs, doppler)"
+    "out = model(audio, rcs, doppler)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "18.0"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14.0 M\n"
+     ]
     }
    ],
    "source": [
-    "sum(p.numel() for p in model.parameters() if p.requires_grad)//1e6"
+    "print(sum(p.numel() for p in model.parameters() if p.requires_grad)//1e6, \"M\")"
    ]
   },
   {
