--- a/ML/Test models.ipynb
+++ b/ML/Test models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
        "torch.Size([32, 128])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
        "torch.Size([32, 128])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
     "        rcs_encoded = self.rcs_encoder(rcs)\n",
     "        doppler_encoded = self.doppler_encoder(doppler)\n",
     "\n",
-    "        stacked_features = torch.stack((torch.rand((8, 128)), acoustic_encoded, rcs_encoded, doppler_encoded), dim=1)\n",
+    "        stacked_features = torch.stack((torch.ones((8, 128)), acoustic_encoded, rcs_encoded, doppler_encoded), dim=1)\n",
     "\n",
     "        combined_features = self.transformer_encoder(stacked_features)\n",
     "\n",
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
