--- a/ML/Test models.ipynb
+++ b/ML/Test models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
        "torch.Size([32, 128])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
        "torch.Size([32, 128])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -222,9 +222,9 @@
    ],
    "source": [
     "class Model(nn.Module):\n",
-    "    def __init__(self, base_channels=64, num_classes=2):\n",
+    "    def __init__(self, batch_size=8, base_channels=64, num_classes=2):\n",
     "        super(Model, self).__init__()\n",
-    "\n",
+    "        self.onces = torch.ones((batch_size, 128))\n",
     "        self.acoustic_encoder_1 = SEResNet1d(base_channels, kernel_size=7, downsample=True)\n",
     "        self.acoustic_encoder_2 = SEResNet1d(base_channels, kernel_size=107, downsample=True)\n",
     "        self.rcs_encoder = SEResNet1d(base_channels, kernel_size=7, downsample=False)\n",
@@ -240,7 +240,7 @@
     "        rcs_encoded = self.rcs_encoder(rcs)\n",
     "        doppler_encoded = self.doppler_encoder(doppler)\n",
     "\n",
-    "        stacked_features = torch.stack((torch.ones((8, 128)), acoustic_encoded, rcs_encoded, doppler_encoded), dim=1)\n",
+    "        stacked_features = torch.stack((self.onces, acoustic_encoded, rcs_encoded, doppler_encoded), dim=1)\n",
     "\n",
     "        combined_features = self.transformer_encoder(stacked_features)\n",
     "\n",
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -280,13 +280,6 @@
    "source": [
     "print(sum(p.numel() for p in model.parameters() if p.requires_grad)//1e6, \"M\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
