remove old training details

--- a/Tests.ipynb
+++ b/Tests.ipynb
@@ -2,26 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "from Libs import *\n",
-    "from Model import Model\n",
-    "from DataSet import DataSet\n",
+    "from Model import DetectionModel\n",
+    "from DataSet import DetectionDataSet\n",
     "\n",
     "device = \"cuda\" if torch.cuda.is_available() else \"cpu\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = Model().to(device=device)\n",
+    "model = DetectionModel().to(device=device)\n",
     "criterion = nn.CrossEntropyLoss(reduction=\"none\")\n",
-    "dataset = DataSet()\n",
+    "dataset = DetectionDataSet()\n",
     "train_set = DataLoader(dataset, batch_size=8, shuffle=True)"
    ]
   },
@@ -29,18 +29,46 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(6., device='cuda:0')\n",
+      "tensor([1., 1., 1., 1., 0., 0., 1., 1.], device='cuda:0')\n",
+      "tensor([0.3274, 0.3747, 0.4501, 0.3044, 1.3218, 1.4821, 0.4118, 0.3923],\n",
+      "       device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.3768, device='cuda:0', grad_fn=<DivBackward0>)\n"
+     ]
+    }
+   ],
    "source": [
     "for X1, X2, X3, y in train_set:\n",
+    "    y = y.to(device)\n",
     "    outputs = model(X1.to(device), X2.to(device), X3.to(device))\n",
     "    \n",
     "    _, pred = torch.max(outputs, dim=1)\n",
-    "    loss = criterion(outputs, y.to(device).long())\n",
+    "    loss = criterion(outputs, y.long())\n",
     "\n",
-    "    weighted_loss = torch.mean(loss*pred)\n",
-    "    weighted_loss.backward()\n",
+    "    print(torch.sum(y))\n",
+    "    print(y)\n",
+    "    print(loss)\n",
+    "\n",
+    "    loss = torch.sum(y*loss)/torch.sum(y)\n",
+    "\n",
+    "    print(loss)\n",
+    "\n",
+    "    # weighted_loss = torch.mean(loss*pred)\n",
+    "    # weighted_loss.backward()\n",
     "    break"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
