--- a/Tests.ipynb
+++ b/Tests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,30 +15,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = DetectionModel().to(device=device)\n",
-    "criterion = nn.CrossEntropyLoss(reduction=\"none\")\n",
-    "dataset = DetectionDataSet()\n",
-    "train_set = DataLoader(dataset, batch_size=8, shuffle=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(6., device='cuda:0')\n",
-      "tensor([1., 1., 1., 1., 0., 0., 1., 1.], device='cuda:0')\n",
-      "tensor([0.3274, 0.3747, 0.4501, 0.3044, 1.3218, 1.4821, 0.4118, 0.3923],\n",
-      "       device='cuda:0', grad_fn=<NllLossBackward0>)\n",
-      "tensor(0.3768, device='cuda:0', grad_fn=<DivBackward0>)\n"
+      "{0: 6141, 1: 6144}\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = DetectionModel().to(device=device)\n",
+    "criterion = nn.CrossEntropyLoss(reduction=\"none\", weight=torch.tensor((0, 1), dtype=torch.float).to(device))\n",
+    "dataset = DetectionDataSet(verbose=True)\n",
+    "train_set = DataLoader(dataset, batch_size=2, shuffle=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([1., 0.], device='cuda:0')\n",
+      "tensor([0.4319, 0.0000], device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.2160, device='cuda:0', grad_fn=<MeanBackward0>)\n",
+      "0.4319199323654175\n"
      ]
     }
    ],
@@ -50,11 +57,11 @@
     "    _, pred = torch.max(outputs, dim=1)\n",
     "    loss = criterion(outputs, y.long())\n",
     "\n",
-    "    print(torch.sum(y))\n",
     "    print(y)\n",
     "    print(loss)\n",
+    "    print(torch.mean(loss))\n",
     "\n",
-    "    loss = torch.sum(y*loss)/torch.sum(y)\n",
+    "    loss = torch.sum(y*loss).item()\n",
     "\n",
     "    print(loss)\n",
     "\n",
